@@ -1,15 +1,12 @@
-﻿1 -- сделано.
+﻿
+1. SYSTEM не работает. Пока следует использовать URIALIAS.
 
 
-2. Синтаксис DXC не поддерживает аналогов er:uri и er:rewriteURI из xmlcatalog. 
-Надо добавить.
-
-
-3. dtd2xml.pl игнорирует "%entity;" внутри "&entity;". 
+2. dtd2xml.pl игнорирует "%entity;" внутри "&entity;". 
 Впрочем, для колорера они не нужны, но на будущее — надо исправить.
 
 
-4. http://www.w3.org/2002/04/xhtml-math-svg/xhtml-math-svg.dtd 
+3. http://www.w3.org/2002/04/xhtml-math-svg/xhtml-math-svg.dtd 
 dtd2xml.pl не понимает конструкций вида
 
 <!ENTITY % SVG.dtd.decl
@@ -23,14 +20,14 @@ dtd2xml.pl не понимает конструкций вида
 Плохо.
 
 
-5. Там же. Наткнувшись на (%ref;) в занечении атрибута, dtd2xml.pl постуыпает 
+4. Там же. Наткнувшись на (%ref;) в занечении атрибута, dtd2xml.pl постуыпает 
 с ней как со значением для элемента — создает ссылку с ролью "item".
 В результате оно обрабатывается как элемент, что в корне неверно. Здесь нужна
 сущность с ролью "attrib"...
 
 
 
-6. dtd2xml.pl не понимает синтаксис http://www.w3.org/Math/DTD/mathml3/mathml3.dtd
+5. dtd2xml.pl не понимает синтаксис http://www.w3.org/Math/DTD/mathml3/mathml3.dtd
 Колорер (dtd.hrc) тоже его не понимает. 
 
 И я сам тоже его не понимаю. Или я не въехал в стандарт, или с префиксами там полный бред:
