@@ -1,0 +1,2 @@
+this.path=case004
+this.file=test
