@@ -1,0 +1,5 @@
+INCLUDE "../cases.dxc"
+
+URIALIAS "http://example.com/" "./"
+
+IMPORT "%this.file%.dtd"
